--- a/index.html
+++ b/index.html
@@ -263,6 +263,17 @@
  </div>
 
 
+
+<div class="w3-row-padding w3-margin-top">
+
+          <p>This visualisation was created by David Ajetomobi. The datasources are gotten from
+              <a href="https://ourworldindata.org/smoking" target="_blank">Smoking & death rates</a>
+              and <a href="https://en.wikipedia.org/wiki/List_of_countries_by_life_expectancy"
+                     target="_blank">Life Expectancy of Countries</a>
+          </p>
+      </div>
+</div>
+
       <script type="text/javascript">
         var vis1 = "json/life_expectancy.json";
         var vis2 = "Cigarette_consumption/js/cigarette_consumption_interactive.vg.json";
