--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
           <p>This visualisation was created by David Ajetomobi. The datasources are gotten from
               <a href="https://ourworldindata.org/smoking" target="_blank">Smoking & death rates</a>
-              and <a href="https://en.wikipedia.org/wiki/List_of_countries_by_life_expectancy"
+              and <a href="https://www.kaggle.com/kumarajarshi/life-expectancy-who"
                      target="_blank">Life Expectancy of Countries</a>
           </p>
       </div>
