--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         It contains a map of the life expectancy, cigarette consumption and death rate of people around the world.
         I then move on to compare the lowest and highest cigarette consumption rate of people around the world with
         the least and highest death rate caused by Tobacco smoking. This was achieved using histograms .
-        Finally, I uses a scatter plot to help view the relationship between Cigarette consumption and life Expectancy.
+        Finally, I used a scatter plot to help view the relationship between Cigarette consumption and life Expectancy.
     </p>
   </div>
 </div>
